@@ -1,5 +1,5 @@
 <?php
-// $Id: views_query.test,v 1.1.4.3 2010-05-24 09:13:03 dereine Exp $
+// $Id: views_query.test,v 1.1.4.4 2010-07-10 06:09:56 dereine Exp $
 
 /**
  * @file
@@ -98,6 +98,7 @@ abstract class ViewsSqlTest extends ViewsTestCase {
     // Define the schema and views data variable before enabling the test module.
     variable_set('views_test_schema', $this->schemaDefinition());
     variable_set('views_test_views_data', $this->viewsData());
+    variable_set('views_test_views_plugins', $this->viewsPlugins());
 
     module_enable(array('views_test'));
     drupal_install_modules(array('views_test'));
@@ -154,8 +155,8 @@ abstract class ViewsSqlTest extends ViewsTestCase {
 }
 
   /**
-  * The views data definition.
-  */
+   * The views data definition.
+   */
   protected function viewsData() {
     // Declaration of the base table.
     $data['views_test']['table'] = array(
@@ -239,10 +240,16 @@ abstract class ViewsSqlTest extends ViewsTestCase {
     return $data;
   }
 
+  /*
+   * The views plugin definition. Override it if you test provides a plugin.
+   */
+  protected function viewsPlugins() {
+    return array();
+  }
 
   /**
-  * A very simple test dataset.
-  */
+   * A very simple test dataset.
+   */
   protected function dataSet() {
     return array(
       array(
