@@ -25,6 +25,7 @@ Views 6.x-3.0-dev
     o #723454 by dereine: Upgrade from 5.0 could cause blocks for views with long names to lose configuration.
     o SA-CONTRIB-2010-067: Fix CSRF and XSS vulnerabilities.
     o #841260: Introduce a field to evaluate math expressions. Relies on CTools 1.7 (not yet released).
+    o by dereine:  allow test cases to add a example plugin.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
